# slang-issue-demo

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  slang_com_object.hpp  slang_helper.hpp  test_shader.slang
